--- a/JavaNext/springboot/demo/src/main/resources/application.properties
+++ b/JavaNext/springboot/demo/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=jdbc:mariadb://localhost:3306/nextsql
+spring.datasource.username=root
+spring.datasource.password=
 
+spring.jpa.show-sql=true
+
+spring.jpa.hibernate.ddl-auto=update
